# plates

./: Cargo.toml  README.md  build.rs  default.nix  flake.nix  shell.nix
.github/workflows/: tests.yml
src/: args.rs  config.rs  error.rs  main.rs  placeholder.rs  render.rs  shell.rs
